--- a/testando.css
+++ b/testando.css
@@ -10,7 +10,7 @@
 
 .img-sidebar {
 text-align: left;
-width: 50%;
+width: auto;
 max-width: 100%;
 border-radius: 40%;
 }
@@ -19,9 +19,9 @@ border-radius: 40%;
 .menu {
 text-align: center;
 position: relative;
-width: 13%;
-padding: 50px;
-margin: 20px 0;
+width: 50%;
+padding: 20px;
+margin: 20px;
 }
 .menu a{
 	color: green;
@@ -29,12 +29,12 @@ margin: 20px 0;
 
 .conteudo {
 	position: relative;
-	left: 25%;
+	left: 0;
 	width: auto;	
 	height: 100%;
 	overflow-y: auto;
-	padding: 0 3%;
+	padding: 0 20%;
 	position: fixed;
 	top: 35px;
-	background-color: green;
+	background-color: #9def3e59;
 }
