--- a/testando.css
+++ b/testando.css
@@ -5,21 +5,20 @@
 }
 
 header {
-	position: fixed;
+	position: relative;
 	background-color: #b3ffcaf2;
 	width: 100%;
 	display: inline-block;
 }
 
-.sidebar {
-	
+.sidebar {	
 }
 
 .img-sidebar {
 text-align: left;
 width: auto;
 max-width: 100%;
-height: 109px;
+height: 100px;
 border-radius: 40%;
 
 }
@@ -47,13 +46,11 @@ margin: 25px;
 	height: 100%;
 	overflow-y: auto;
 	padding: 0 20%;
-	position: fixed;
-	top: 177px;
+	top: 20px;
 }
 
 #conteudo h1 {
 	text-align: center;
-	margin-top: 20px;
 }
 
 #conteudo p {
