--- a/testando.css
+++ b/testando.css
@@ -5,31 +5,105 @@
 }
 
 header {
+	position: fixed;
 	position: relative;
 	background-color: #b3ffcaf2;
 	width: 100%;
+	bottom: 85px;
 	display: inline-block;
 }
 
-.sidebar {	
+.menu-logo {
+	width: 320px;
+	height: 240px;
+	display: inline;
+	float: left;
+	margin-left: 25px;
+	margin-top: 30px;
 }
+.links {
+	padding: 15px;
+	text-decoration: none;
+	color: #18b24e;
+}
+
+.links:hover {
+	color: #067206;
+}
+.menu-links {
+	display: inline-block;
+	margin-top: 140px;
+	list-style: none;
+	padding: 0px;
+	margin-left: 80px;
+
+} 
+li {
+		display: inline-block;
+	text-decoration: none;
+}
+
+#txtBusca{
+  float:left;
+  background-color:transparent;
+  padding-left:5px;
+  font-size:18px;
+  border:none;
+  height:32px;
+  width:390px;
+}
+
+#btnBusca{
+  float:left;
+  cursor:pointer;
+}
+
+#divBusca img{
+  float:left;
+}
+
+#divBusca{
+  border:solid 3px #3ad813;
+  border-radius:10px;
+  height:37px;
+  width:400px;
+  float: right;
+  margin-top: 90px;
+}
+
+@media screen and (max-width: 766px) {
+	.menu {
+		display: flex;
+		text-align: center;
+	}
+	.menu-logo {
+		float: none;
+		display: inline-block;
+	}
+	.img-logo {
+		text-align: center;
+	}
+	.links {
+		text-align: center;
+	}
+	.menu-links {
+		margin-top: 0;
+		transform: translateY(-50px);
+		text-align: center;	}
+
+
 
 .img-sidebar {
 text-align: left;
 width: auto;
 max-width: 100%;
 height: 100px;
-border-radius: 40%;
+border-radius: 40%;	
 
 }
 
 
-#menu {
-text-align: center;
-position: relative;
-width: 100%;
-padding: 0px;
-margin: 25px;
+
 }
 #menu a{
 	color: green;
@@ -46,7 +120,7 @@ margin: 25px;
 	height: 100%;
 	overflow-y: auto;
 	padding: 0 20%;
-	top: 20px;
+	
 }
 
 #conteudo h1 {
